# configure.in - Top-level configure.in for Sympa
# RCS Identication ; $Revision$ ; $Date$ 
#
# Sympa - SYsteme de Multi-Postage Automatique
# Copyright (c) 1997, 1998, 1999, 2000, 2001 Comite Reseau des Universites
# Copyright (c) 1997,1998, 1999 Institut Pasteur & Christophe Wolfhugel
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.

AC_INIT(check_perl_modules.pl)
PACKAGE=sympa
VERSION=`cat ${srcdir}/.version`
MAJOR_VERSION=[`expr $VERSION : '\([0-9][0-9]*\)'`]
AC_SUBST(MAJOR_VERSION)
MINOR_VERSION=[`expr $VERSION : '[0-9][0-9]*\.\([0-9][0-9]*\)'`]
AC_SUBST(MINOR_VERSION)
MICRO_VERSION=[`expr $VERSION : '[0-9][0-9]*\.[0-9][0-9]*\.\([0-9][0-9]*\)'`]
AC_SUBST(MICRO_VERSION)
AM_INIT_AUTOMAKE([sympa], $VERSION, nosubst)
AC_PREREQ(2.13)

AC_PREFIX_DEFAULT(/home/sympa)

## Directories setup
## for main config files
sysconfdir=/etc

## for executable programs
bindir='${prefix}/bin'

## for executable programs run by sysadmin
sbindir='${prefix}/bin'

## for libraries
libdir='${prefix}/bin'

## for *read-only* data files
datadir='${prefix}/bin/etc'

## for modifiable data files
localstatedir='${prefix}/expl'

## documentation
mandir='usr/local/man'

## SYS V init scripts directory
INITDIR=/etc/rc.d/init.d
AC_ARG_WITH(initdir, [  --with-initdir=DIR     install System V init script in DIR  (default etc/rc.d/init.d)], [INITDIR="$withval"])
AC_SUBST(INITDIR)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_MAKE_SET
AC_AIX

AC_PATH_PROG(PERL, perl, /usr/bin/perl)
AC_ARG_WITH(perl, [  --with-perl=FULLPATH       set full path to Perl interpreter (default /usr/bin/perl)], [PERL="$withval"])
AC_SUBST(PERL)

AC_PATH_PROG(OPENSSL, openssl, /usr/local/ssl/bin)
AC_ARG_WITH(openssl, [  --with-openssl=FULLPATH       set path to OpenSSL (default /usr/local/ssl/bin/openssl)], [OPENSSL="$withval"])
AC_SUBST(OPENSSL)

AC_PATH_PROG(GENCAT, gencat, /usr/bin/gencat)
AC_ARG_WITH(gencat, [  --with-gencat=FULLPATH       set path to gencat (default /usr/bin/gencat)], [GENCAT="$withval"])
AC_SUBST(GENCAT)

AC_PATH_PROG(CVS2CL, cvs2cl.pl, /usr/local/bin)
AC_SUBST(CVS2CL)

AC_PATH_PROG(SH, sh, /bin/sh)

USER=sympa
AC_ARG_WITH(user, [  --with-user=LOGIN       set sympa user name (default sympa)], [USER="$withval"])
AC_SUBST(USER)

GROUP=sympa
AC_ARG_WITH(group, [  --with-group=LOGIN     set sympa group name (default sympa)], [GROUP="$withval"])
AC_SUBST(GROUP)

SENDMAIL_ALIASES=/etc/mail/sympa_aliases
AC_ARG_WITH(sendmail_aliases, [  --with-sendmail_aliases=ALIASFILE     set sendmail aliases file to be used by Sympa (default /etc/mail/sympa_aliases)], [SENDMAIL_ALIASES="$withval"])
AC_SUBST(SENDMAIL_ALIASES)

NEWALIASES=/usr/bin/newaliases
AC_ARG_WITH(newaliases, [  --with-newaliases=FULLPATH     set path to sendmail newaliases command (default /usr/bin/newaliases)], [NEWALIASES="$withval"])
AC_SUBST(NEWALIASES)

NEWALIASES_ARG=
AC_ARG_WITH(newaliases_arg, [  --with-newaliases_arg=ARGS     set arguments to newaliases command (default NONE)], [NEWALIASES_ARG="$withval"])
AC_SUBST(NEWALIASES_ARG)

dnl Initialize maintainer mode
AM_MAINTAINER_MODE

AC_OUTPUT(Makefile)



